# Tickle

./: .gitignore  CMakeLists.txt  README.html  README.md  local.properties  settings.gradle  tickle.apk
Installer/config/: config.xml
MoveStack/: buildclean.ps1  buildclean.sh  cli.cpp  main.c  moveStack.c  moveStack.h
Tickle/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  Tickle  Tickle.pro  Tickle.pro.user.1688c8a  Tickle.pro.user.a8959fd  Tickle_mr_IN.ts  Tickle_resource.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  moc_ticbutton.cpp  resource.qrc  ticbutton.cpp  ticbutton.h  ui_mainwindow.h
Tickle/debug/: moc_mainwindow.cpp  moc_ticbutton.cpp  qrc_resource.cpp
app/: build.gradle
app/src/androidTest/java/com/ryuapps/tickle/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ryuapps/tickle/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/ryuapps/tickle/: ExampleUnitTest.java
build-Tickle-Desktop_Qt_5_9_9_GCC_32bit-DebuG/: Tickle
build-Tickle-Desktop_Qt_5_9_9_GCC_32bit-Debug/: Makefile  moc_mainwindow.cpp  moc_ticbutton.cpp
build-Tickle-Desktop_Qt_5_9_9_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  Tickle  Tickle_resource.rc  moc_mainwindow.cpp  moc_ticbutton.cpp  ui_mainwindow.h
build-Tickle-Desktop_Qt_5_9_9_MinGW_32bit-Debug/debug/: moc_mainwindow.cpp  moc_ticbutton.cpp  qrc_resource.cpp
builds/build-debug-linux/: CMakeCache.txt  Makefile  cmake_install.cmake  tickle  tickle.cbp
builds/build-debug-linux/.cmake/api/v1/reply/: cache-v2-8367ace37ce7530020da.json  cmakeFiles-v1-b7c124ea219db77787b5.json  cmakeFiles-v1-e2a047307b62d88b988a.json  codemodel-v2-6b718e12ae61448de477.json  codemodel-v2-cc9129ae5db7b4346782.json  index-2022-01-06T09-32-48-0680.json  index-2022-01-15T14-57-26-0936.json  target-tickle-Debug-8ad09c3c5cd7dc177d9c.json  target-tickle-Debug-bf90b9b760704367cf6b.json  target-tickle_autogen-Debug-efa7444ca3764766c93a.json
builds/build-debug-linux/tickle_autogen/: mocs_compilation.cpp
builds/build-debug-linux/tickle_autogen/K6S233IZAZ/: moc_mainwindow.cpp  moc_ticbutton.cpp
builds/build-debug-linux/tickle_autogen/include/: ui_mainwindow.h
forms/: mainwindow.ui
gradle/wrapper/: gradle-wrapper.properties
headers/: config.h  location.h  mainwindow.h  stack.h  ticbutton.h
src/: main.cpp  mainwindow.cpp  stack.cpp  ticbutton.cpp
